# composite-provider

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  Makefile  README.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md
etc/: openssl.cnf
examples/: Makefile  README.md  encoding_example.c  load_provider.c
include/: composite_provider.h
scripts/: README.md  build_and_test.sh  check_composite_r5.sh  fullbuild.sh  gen_composite_r5.sh  run_all_providers.sh  run_tests.sh  test_all_providers.sh
src/: compat.h  composite_decoder.c  composite_decoder.h  composite_encoder.c  composite_encoder.h  composite_encoding.c  composite_encoding.h  composite_kem.c  composite_kem.h  composite_kem_encoding.c  composite_kem_encoding.h  composite_kem_key.c  composite_kem_key.h  composite_kem_keymgmt.c  composite_kem_keymgmt.h  composite_key.c  composite_key.h  composite_keymgmt.c  composite_keymgmt.h  composite_keys.c  composite_sig.c  composite_sig.h  composite_sig_encoding.c  composite_sig_encoding.h  composite_sig_key.c  composite_sig_key.h  mldsa_composite.c  mldsa_composite.h  mlkem_composite.c  mlkem_composite.h  provider.c  provider.h  provider_ctx.c  provider_ctx.h
tests/: CMakeLists.txt  Makefile  composite.cnf  test_encoding  test_encoding.c  test_evp_kem_keygen.c  test_evp_keygen.c  test_helpers.c  test_keygen_kem.c  test_keygen_sig.c  test_oid_registration.c  test_provider.c  test_sign_verify.c
tests/include/: test_helpers.h
